# QChewingTest

./: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  README  main.cpp
